<resources>
    <string name="app_name">AWStoresApp</string>
    <string name="company_name">شركة مياه الشرب بالأسكندرية</string>
    <string name="sector_name">قطاع التكنولوجيا والخدمات الرقمية</string>
    <string name="depart_name">إدارة البرمجيات وصيانتها</string>
    <string name="splash_title">تطبيق المخازن v2</string>
    <string name="login_user">دخول</string>
    <string name="enter_your_name">إسم المستخدم</string>
    <string name="enter_your_password">كلمة المرور</string>
    <string name="remember_me">remember me</string>
    <string name="login_text">تسجيل الدخول</string>
    <string name="my_fav_list">قائمة المفضلة</string>
    <string name="search_for_element">إستعلام عن صنف</string>
    <string name="search_action_bar">Search</string>
    <string name="reset_password_action_bar">Guide Book</string>
    <string name="fav_action_bar">Fav</string>
    <string name="query_element">بحـث</string>
    <string name="query_element_hint">فضلا أدخل رقم العنصر</string>
    <string name="query_name_element_hint">فضلا أدخل إسم العنصر</string>
    <string name="menu_page">MenuPage</string>
    <string name="title_activity_top_items_changes">TopItemsChanges</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="advance_search">بحث بالأسم</string>
    <string name="store_report">تقرير جرد مخزن</string>
    <string name="store_report_periodic">تقرير حركة مخزن فى فترة</string>
    <!--    -->
    <string name="get_result">بحث</string>
    <string name="from_date">مــن</string>
    <string name="to_date">إلــى</string>
    <!--   -->
    <string name="item_code">كود الصنف</string>
    <string name="item_name">اسم الصنف</string>
    <string name="total_qty">رصيد الصنف</string>
    <string name="store_analysis">جرد مخزن</string>
    <string name="store_analysis_periodic">حركة مخزن فى فترة</string>
    <string name="total_qty_now">جرد مخزن فى فترة</string>
    <string name="total_qty_in_start_point">رصيد بداية المدة</string>
    <string name="total_qty_income">إجمالى الوارد</string>
    <string name="total_qty_outcome">إجمالى الصادر</string>
    <string name="total_qty_end_point">رصيد نهاية المدة</string>
    <string name="search_view">Search</string>
    <string name="last_date">تاريخ أخر إرسال</string>
    <string name="change_password_text_view">تغيير كلمة المرور</string>
    <string name="current_login_password_hint">فضلا أدخل كلمة المرور الحاليه</string>
    <string name="new_password_hint">فضلا أدخل كلمه المرور الجديدة</string>
    <string name="change_password_button">تغيير كلمة المرور</string>
    <string name="request_new_user"><u>Request New User.</u></string>
    <string name="request_new_user_button">طلب مستخدم جديد</string>
    <string name="enter_employee_name"> اسم الموظف</string>
    <string name="enter_notes">ملاحظات</string>
    <string name="enter_employee_number">رقم الموظف (5 أرقام)</string>
    <string name="enter_employee_phone_number">رقم الموبيل ( 11 رقم)</string>
    <string name="enter_user_location">مكان العمل</string>
    <string name="enter_user_job">الوظيفة</string>
    <string name="confirm_password_hint">مطابقة كلمة المرور الجديدة</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="forget_password">forget Password</string>
    <string name="setting">change IP Address</string>


</resources>