<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffff">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/aw_logo" />


    <ImageView
        android:id="@+id/logo"
        android:layout_width="287dp"
        android:layout_height="247dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="64dp"
        android:layout_marginTop="89dp"
        android:layout_marginEnd="64dp"
        android:src="@drawable/logo" />


    <TextView
        android:id="@+id/comId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_marginTop="60dp"
        android:gravity="center_horizontal"
        android:text="@string/company_name"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/sectorId"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/comId"
        android:layout_marginTop="7dp"
        android:gravity="center_horizontal"
        android:text="@string/sector_name"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/departId"
        android:layout_width="fill_parent"
        android:layout_height="24dp"
        android:layout_below="@+id/sectorId"
        android:layout_marginTop="7dp"

        android:gravity="center_horizontal"
        android:text="@string/depart_name"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        android:textStyle="bold" />
    <TextView

        android:layout_width="fill_parent"
        android:layout_height="24dp"
        android:layout_below="@+id/departId"
        android:layout_marginTop="7dp"

        android:gravity="center_horizontal"
        android:text="@string/splash_title"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        android:textStyle="bold" />

</RelativeLayout>