<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/colorAccent"
    tools:context=".views.ChangePassword">

    <ImageButton
        android:onClick="navToMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/arrow_forward"
        android:background="@color/colorAccent"
        tools:ignore="UsingOnClickInXml" />


    <ImageView
        android:id="@+id/changePasswordImg"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="50dp"
        android:layout_weight="0"
        android:src="@drawable/change_password_logo" />
    <TextView
        android:id="@+id/changePasswordTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:gravity="center"
        android:text="@string/change_password_text_view"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="27sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/currentPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="35dp"
        android:layout_marginVertical="10dp"
        android:hint="@string/current_login_password_hint"
        android:inputType="number"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorAccent"
        android:textAlignment="center"
        android:textSize="15sp"
        android:background="@drawable/rounded_corner_white_color"
        tools:ignore="TextFields" />


    <EditText
        android:id="@+id/newPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="35dp"
        android:layout_marginVertical="10dp"
        android:hint="@string/new_password_hint"
        android:inputType="number"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorAccent"
        android:textAlignment="center"
        android:textSize="15sp"
        android:background="@drawable/rounded_corner_white_color"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/confirmPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="35dp"
        android:layout_marginVertical="10dp"
        android:hint="@string/confirm_password_hint"
        android:inputType="number"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorAccent"
        android:textAlignment="center"
        android:textSize="15sp"
        android:background="@drawable/rounded_corner_white_color"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/changePasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="35dp"
        android:text="@string/change_password_button"
        android:textColor="@android:color/white"
        android:background="@drawable/rounded_corner_primary_color"
        android:textSize="15sp" />

</LinearLayout>

</ScrollView>