<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        android:orientation="vertical"
        tools:context=".views.RequestNewUser">

        <include
            layout="@layout/custom_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/requestImg"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:layout_weight="0"
            android:src="@drawable/requesr_user" />

        <EditText
            android:id="@+id/requestEmpNameEditText"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/rounded_corner_white_color"
            android:hint="@string/enter_employee_name"
            android:inputType="text"
            android:maxLines="1"
            android:imeOptions="actionNext"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorAccent"
            android:textSize="15sp"
            tools:ignore="TextFields" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/requestEmpIdEditText"
                android:layout_width="110dp"
                android:layout_height="45dp"
                android:layout_marginVertical="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/rounded_corner_white_color"
                android:hint="@string/enter_employee_number"
                android:inputType="number"
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:maxLength="5"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorAccent"
                android:textSize="10sp"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/requestEmpMobileEditText"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginVertical="5dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/rounded_corner_white_color"
                android:hint="@string/enter_employee_phone_number"
                android:inputType="number"
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:maxLength="11"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorAccent"
                android:textSize="15sp"
                tools:ignore="TextFields" />
        </LinearLayout>


        <EditText
            android:id="@+id/requestUserJobEditText"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/rounded_corner_white_color"
            android:hint="@string/enter_user_job"
            android:inputType="text"
            android:maxLines="1"
            android:imeOptions="actionNext"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorAccent"
            android:textSize="15sp"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/requestUserLocationEditText"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/rounded_corner_white_color"
            android:hint="@string/enter_user_location"
            android:inputType="text"
            android:maxLines="1"
            android:imeOptions="actionNext"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorAccent"
            android:textSize="15sp"
            tools:ignore="TextFields" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/requestPasswordEditText"
                android:layout_width="0.0dp"
                android:layout_height="45dp"
                android:layout_marginVertical="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="0.5"
                android:background="@drawable/rounded_corner_white_color"
                android:hint="@string/enter_your_password"
                android:inputType="number"
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorAccent"
                android:textSize="15sp"
                tools:ignore="TextFields" />


            <EditText
                android:id="@+id/requestUserNameEditText"
                android:layout_width="0.0dp"
                android:layout_height="45dp"
                android:layout_marginVertical="5dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="0.5"
                android:background="@drawable/rounded_corner_white_color"
                android:hint="@string/enter_your_name"
                android:inputType="text"
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorAccent"
                android:textSize="15sp"
                tools:ignore="TextFields" />


        </LinearLayout>


        <EditText
            android:id="@+id/requestNotesEditText"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/rounded_corner_white_color"
            android:hint="@string/enter_notes"
            android:inputType="textMultiLine"
            android:maxLines="1"
            android:imeOptions="actionDone"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorAccent"
            android:textSize="15sp"
            tools:ignore="TextFields" />

        <Button
            android:id="@+id/requestNewUserButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="35dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_corner_primary_color"
            android:text="@string/request_new_user_button"
            android:textColor="@android:color/white"
            android:textSize="15sp" />


    </LinearLayout>
</ScrollView>