<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        android:orientation="vertical"
        tools:context=".views.ForgetUserPasswordScreen">

        <include
            layout="@layout/custom_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <ImageView
            android:id="@+id/requestImg"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="20dp"
            android:layout_weight="0"
            android:src="@drawable/forget_password" />

        <EditText
            android:id="@+id/forgetEmpIdEditText"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/rounded_corner_white_color"
            android:gravity="center_vertical"
            android:hint="@string/enter_employee_number"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="5"
            android:maxLines="1"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorAccent"
            android:textSize="13sp"
            tools:ignore="RtlCompat,TextFields" />

        <EditText
            android:id="@+id/forgetMobileEditText"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/rounded_corner_white_color"
            android:gravity="center_vertical"
            android:hint="@string/enter_employee_phone_number"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="11"
            android:maxLines="1"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorAccent"
            android:textSize="13sp"
            tools:ignore="RtlCompat,TextFields" />

        <EditText
            android:id="@+id/forgetUserNameEditText"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/rounded_corner_white_color"
            android:gravity="center_vertical"
            android:hint="@string/enter_your_name"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorAccent"
            android:textSize="13sp"
            tools:ignore="RtlCompat,TextFields" />

        <EditText
            android:id="@+id/forgetPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/rounded_corner_white_color"
            android:gravity="center_vertical"
            android:hint="@string/enter_your_password"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLines="1"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorAccent"
            android:textSize="13sp"
            tools:ignore="RtlCompat,TextFields" />

        <Button
            android:id="@+id/forgetPasswordButton"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="35dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_corner_primary_color"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/change_password_button"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            tools:ignore="RtlCompat" />


    </LinearLayout>
</ScrollView>