<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    app:cardCornerRadius="15dp"
    app:cardElevation="15dp"
    app:cardMaxElevation="20dp"
    app:cardPreventCornerOverlap="true"
    android:layout_margin="10dp"
    app:cardBackgroundColor="@android:color/white"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="7dp"
        >
        <ImageView
            android:id="@+id/idAddToFavAdvancedSearchImageView"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_margin="5dp"
            android:contentDescription="@string/app_name"
            android:padding="5dp"
            android:src="@drawable/ic_favorite" />

        <TextView
            android:id="@+id/idItemNameTextViewH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/query_element"
            android:textDirection="rtl"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="13sp"
            android:textStyle="bold" />

        <!-- Text VIew to display Course Rating -->
        <!-- Image used in present in drawable folder -->
        <TextView
            android:id="@+id/idItemNoTextViewH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/idItemNameTextViewH"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:drawablePadding="2dp"
            android:text="@string/search_for_element"
            android:textDirection="rtl"
            android:textColor="@color/colorPrimaryDark"
            />
        <TextView
            android:id="@+id/idStoreTotalQuantityTextViewH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/idItemNoTextViewH"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:drawablePadding="2dp"
            android:text="@string/search_for_element"
            android:textDirection="rtl"
            android:textColor="@color/colorPrimaryDark"
            />

    </RelativeLayout>

</androidx.cardview.widget.CardView>